# GoldfishScrape

./: .gitignore  .ignore  GoldfishScrape.py  LICENSE  README.md  cubecobra.py  goldfishscrape.py  input_formats.py  main.py  new_data.py  pyproject.toml  requirements.txt
MtgScraper/: Aetherhub.py  AetherhubScraper.py  CubeCobra.py  CubeCobraScraper.py  GoldfishScraper.py  MtgGoldfish.py  MtgTop8Scraper.py  MtgaZone.py  MtgaZoneScraper.py  __init__.py  base.py  cubecobra.py  mtg_utils.py
tests/: tests.py
