[project]
name = "goldfishscrape"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "cloudscraper @ git+https://github.com/VeNoMouS/cloudscraper.git",
]
